@@ -1,5 +1,6 @@
 Version 3.1:
 
+* Fix loading WHDLoad .lha archives on Windows.
 * Some changes to how/where plugins are found.
 * Build system update.
 * Official builds created with pyinstaller.
